<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Mercahnt"
            type="io.bonat.customer_lib.data.model.Mercahnt" />
        <variable
            name="listener"
            type="io.bonat.customer_lib.ui.merchant.MerchantActivity" />
        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F7F7FA"
        android:orientation="vertical"
        tools:context="io.bonat.customer_lib.ui.merchant.MerchantActivity">

        <include layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/color_D3B289" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_minus20sdp">

            <LinearLayout
                android:id="@+id/content_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/_radius_white_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:background="@drawable/_radius_e76862_10"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_extrabold_bahij_semibold"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="@{Mercahnt.customerPoint}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bahij_semibold"
                            android:gravity="center"
                            android:text="@string/points"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/reward_value_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_extrabold_bahij_semibold"
                                android:gravity="center"
                                android:includeFontPadding="false"
                                android:text="@{Mercahnt.rewardsRedeemed}"
                                android:textColor="@color/color_92C2B2"
                                android:textSize="@dimen/_20sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:layout_toEndOf="@+id/reward_value_tv"
                                android:fontFamily="@font/poppins_extrabold_bahij_semibold"
                                android:gravity="center"
                                android:includeFontPadding="false"
                                android:paddingTop="@dimen/_3sdp"
                                android:text="SR"
                                android:textColor="@color/color_010101"
                                android:textSize="@dimen/_10sdp" />
                        </RelativeLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bahij_semibold"
                            android:gravity="center"
                            android:text="@string/you_saved"
                            android:textAllCaps="true"
                            android:textColor="@color/color_010101"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </LinearLayout>

                <include
                    layout="@layout/rate_emoji_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listener="@{listener}"
                    android:visibility="@{Mercahnt.allowFeedback==0?View.GONE:View.VISIBLE}"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:tabIndicatorColor="@color/color_010101"
                            app:tabSelectedTextColor="@color/color_010101"
                            app:tabTextColor="@color/color_7D7B78">

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rewards" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wallet" />

                        </com.google.android.material.tabs.TabLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_E5E5E5"/>
                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white">

                        </androidx.viewpager.widget.ViewPager>
                        <!--   <androidx.recyclerview.widget.RecyclerView
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:orientation="vertical"
                               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                     -->
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</layout>