<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="io.bonat.customer_lib.widget.dialog.FeedbackDialog" />

    </data>

    <RelativeLayout
        android:id="@+id/feedback_parent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_BF293340"
        android:onClick="@{listener.onClick}"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/feedback_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_120sdp"
            android:onClick="@{listener.onClick}"
            android:background="@drawable/radius_white_top_10"
            android:orientation="vertical"
            android:paddingTop="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_radius_white_10"
                android:orientation="vertical"
                android:paddingTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_medium_bahij_semi"
                    android:includeFontPadding="false"
                    android:text="@string/how_was_your_experience"
                    android:textColor="@color/color_010101"
                    android:textSize="@dimen/_12sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@color/color_F7F7FA" />

                <LinearLayout
                    android:id="@+id/emoji_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/ic_rate_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:background="@drawable/emoji_selected"
                        android:gravity="center"
                        android:onClick="@{listener.onClick}"
                        android:paddingTop="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_14sdp">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_emoji_1" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/color_12010101" />

                    <LinearLayout
                        android:id="@+id/ic_rate_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:background="@drawable/emoji_selected"
                        android:gravity="center"
                        android:onClick="@{listener.onClick}"
                        android:paddingTop="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_14sdp">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_emoji_2" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/color_12010101" />

                    <LinearLayout
                        android:id="@+id/ic_rate_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:onClick="@{listener.onClick}"
                        android:background="@drawable/emoji_selected"
                        android:gravity="center"
                        android:paddingTop="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_14sdp">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_emoji_3" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/color_12010101" />

                    <LinearLayout
                        android:id="@+id/ic_rate_4"
                        android:layout_width="0dp"
                        android:onClick="@{listener.onClick}"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:background="@drawable/emoji_selected"
                        android:gravity="center"
                        android:paddingTop="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_14sdp">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_emoji_4" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/color_12010101" />

                    <LinearLayout
                        android:id="@+id/ic_rate_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{listener.onClick}"
                        android:layout_weight=".2"
                        android:background="@drawable/emoji_selected"
                        android:gravity="center"
                        android:paddingTop="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_14sdp">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_emoji_5" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_F7F7FA" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/comment_to_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/textarea_background"
                android:gravity="top"
                android:hint="@string/describe_your_feedback"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLength="140"
                android:minHeight="@dimen/_90sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_010101"
                android:textColorHint="@color/color_7D7B78"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <io.bonat.customer_lib.widget.AlphaTextViewPressed
                    android:id="@+id/skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/color_F4ECE2"
                    android:fontFamily="@font/mon_medium_bahij_semi"
                    android:gravity="center"
                    android:paddingTop="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_14sdp"
                    android:text="@string/skip"
                    android:textAllCaps="true"
                    android:onClick="@{listener.onClick}"
                    android:textColor="@color/color_010101"
                    android:textSize="@dimen/_12sdp" />

                <io.bonat.customer_lib.widget.AlphaTextViewPressed
                    android:id="@+id/send_feedback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/color_010101"
                    android:fontFamily="@font/mon_medium_bahij_semi"
                    android:gravity="center"
                    android:onClick="@{listener.onClick}"
                    android:paddingTop="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_14sdp"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:textAllCaps="true" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
